# SiriusLeto

./: .dockerignore  .gitignore  Dockerfile  MilvusClient.py  README.md  alembic.ini  docker-compose.yml  http_embedder.py  main.py  pyproject.toml  schemas.py  settings.py  sql_query.py  Краткая инструкция по запуску.docx
alembic/: env.py  script.py.mako
alembic/versions/: 0001_add_organization_topic.py
app/api/: dependencies.py
app/clients/: MilvusClient.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/db/models/: __init__.py  author.py  organization.py  organization_topic.py  publication.py  publication_author.py  topic.py
app/repositories/: author_repository.py  base.py  organization_topic_repository.py
app/schemas/: author.py  organization_topic.py  recommendation.py
app/services/: author_service.py  organization_topic_service.py  recommendation_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ResultsList.css  ResultsList.jsx  SearchForm.css  SearchForm.jsx
frontend/src/hooks/: useRecommendations.js
test/: test_connect_server.py  test_db.py
volumes/milvus/rdb_data/: 000016.sst  000039.sst  000047.sst  000055.sst  000063.sst  000071.sst  000079.sst  000087.sst  000095.sst  000103.sst  000111.sst  000119.sst  IDENTITY  LOG  LOG.old.1772732882346101  LOG.old.1772734075353830  LOG.old.1772738359345807  LOG.old.1772777770873376  LOG.old.1772866472236511  LOG.old.1772870368290911  LOG.old.1772881486424192  (+9 more)
(+32 files in other folders)
